# waffledotcom-server

./: .env  .env.dev  .env.local  .env.prod  .env.test  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.dev_2.txt  requirements.txt
.github/workflow/: test.yaml
.github/workflows/: deploy-dev-manual.yaml  deploy-dev.yaml  deploy-dev.yml  deploy-prod.yaml  deploy-prod.yml  test.yaml
kube/: deploy-local.yaml  service-local.yaml
scripts/: down-local.sh  precommit-py.sh  up-local.sh
waffledotcom/: conftest.py  pytest.ini  test
waffledotcom/src/: app.py  main.py  secrets.py  settings.py
waffledotcom/src/apis/: router.py
waffledotcom/src/apis/dummy/: __init__.py  repository.py  views.py
waffledotcom/src/apis/user/: __init__.py  exception.py  repositories.py  schema.py  services.py  views.py
waffledotcom/src/apps/: router.py
waffledotcom/src/apps/batch/: schemas.py  views.py
waffledotcom/src/apps/common/: exceptions.py  schemas.py
waffledotcom/src/apps/health/: views.py
waffledotcom/src/apps/team/: models.py
waffledotcom/src/apps/user/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
waffledotcom/src/batch/: scheduler.py
waffledotcom/src/batch/slack/: config.py  main.py  schema.py  services.py
waffledotcom/src/database/: __init__.py  base.py  config.py  connection.py  connection_test.py
waffledotcom/src/database/migrations/: env.py
waffledotcom/src/database/migrations/versions/: 1696590278_initial_migration_f2b7ce2c8874.py  1698755947_add_generation_field_c8dea6766159.py  2023_06_17_1806-89aed622e1e5_.py
waffledotcom/src/database/models/: __init__.py  base.py  dummy.py  model_test.py  position.py  sns.py  team.py  user.py
waffledotcom/src/routers/: health.py  health_test.py
waffledotcom/src/tests/: conftest.py  test_connections.py  test_dummy.py  test_models.py
waffledotcom/src/tests/e2e/: conftest.py
waffledotcom/src/tests/fixtures/: client.py
waffledotcom/src/tests/models/: conftest.py  test_position.py  test_sns.py  test_team.py  test_user.py
waffledotcom/src/tests/unittests/user/: conftest.py  test_user_service.py
waffledotcom/src/tests/user/: conftest.py  test_user_service.py
waffledotcom/src/utils/: __init__.py  dependency_solver.py  singleton.py  singleton_utils.py
waffledotcom/src/utils/test/fixtures/: client.py  database.py
