[tool.poetry]
name = "waffledotcom-server"
version = "0.1.0"
description = ""
authors = ["shinhong-park <shinhong.park@linecorp.com>"]
readme = "README.md"
packages = [{include = "waffledotcom_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.13"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
