[tool.poetry]
name = "waffledotcom-server"
version = "0.1.0"
description = ""
authors = ["shinhong-park <shinhong.park@linecorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
bcrypt = "^4.0.1"
alembic = "^1.12.0"
mysqlclient = "^2.2.0"
pygithub = "^1.59.1"
slack-sdk = "^3.22.0"
aws-secretsmanager-caching = "^1.1.1.5"
boto3 = "^1.28.56"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
pydantic = "^2.4.2"
aiohttp = "^3.9.5"
schedule = "^1.2.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
black = "^23.9.1"
pylint = "^2.17.6"
devtools = "^0.12.2"
pyright = "^1.1.329"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/migrations/versions",
]
venvPath = "."
venv = ".venv"
reportShadowedImports = false

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.black]
line-length = 88
preview = true

[tool.ruff]
line-length = 88
